--- a/src/css/themes/_unified-style.scss
+++ b/src/css/themes/_unified-style.scss
@@ -27,16 +27,16 @@ $countries: (
                 (RWA, #f07f52, #f09752, #2f5674, #f8cba9, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #2d3e46, #345962, #3f7d8b),
                 (SEN, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
 
-                (GHA, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
-                (ETH, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
-                (UGA, #db514b, #e4c779, #5b3b3a, #f5e5bb, #ede4e6, #a68f8f, #d2c2c0, #978b90, #b4a0a9,50% 100%, #3a2e2f, #503a3e, #6e4a52),
+                (GHA, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,46% 76%, #29403e, #305a52, #3a7f70),
+                (ETH, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,59% 76%, #29403e, #305a52, #3a7f70),
+                (UGA, #db514b, #e4c779, #5b3b3a, #f5e5bb, #ede4e6, #a68f8f, #d2c2c0, #978b90, #b4a0a9,57% 100%, #3a2e2f, #503a3e, #6e4a52),
                 (MOZ, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
-                (NGA, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
-                (MWI, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
-                (KEN, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
-                (TZA, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
-                (ZMB, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
-                (AFG, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
+                (NGA, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,48% 76%, #29403e, #305a52, #3a7f70),
+                (MWI, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,57% 100%, #29403e, #305a52, #3a7f70),
+                (KEN, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,59% 97%, #29403e, #305a52, #3a7f70),
+                (TZA, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,58% 91%, #29403e, #305a52, #3a7f70),
+                (ZMB, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,56% 90%, #29403e, #305a52, #3a7f70),
+                (AFG, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,69% 57%, #29403e, #305a52, #3a7f70),
 
                 (ZZZ, #f07f52, #f0e352, #2f5674, #f8f1a9, #e0e9f1, #abb9c4, #c9ddef, #93a0ab, #a5bcd0,50% 50%, #2d3246, #344362, #3f598b) //Training
 );
@@ -129,12 +129,11 @@ $countries: (
         background-position: nth($country, 11);
       }
 
-      .afg-title {
+      .h4 {
 
         background-color: nth($country, 10);
 
       }
-
 
     }
 
