--- a/src/css/countrystat-ui.css
+++ b/src/css/countrystat-ui.css
@@ -6197,7 +6197,7 @@ div[data-plugin="filter"] .fx-catalog-modular-form-content {
   padding-bottom: 0px; }
 
 .news-list .list-image {
-  height: 100px;
+  height: 80px;
   background-color: #d8d8d8;
   background-image: url(img/camera.svg);
   background-position: center center;
@@ -6206,13 +6206,13 @@ div[data-plugin="filter"] .fx-catalog-modular-form-content {
   /* Default */ }
   @media (min-width: 768px) and (max-width: 991px) {
     .news-list .list-image {
-      height: 150px; } }
+      height: 130px; } }
   @media (min-width: 992px) and (max-width: 1199px) {
     .news-list .list-image {
-      height: 200px; } }
+      height: 180px; } }
   @media (min-width: 1200px) {
     .news-list .list-image {
-      height: 250px; } }
+      height: 230px; } }
   .news-list .list-image .img-responsive {
     width: 100%; }
 .news-list h2 {
@@ -6353,12 +6353,14 @@ body[data-country='AGO'] {
     color: #d2c2c0; }
   body[data-country='AGO'] .home-tile.gray {
     background-color: #978b90; }
+    body[data-country='AGO'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='AGO'] .home-tile.map {
     background-color: #b4a0a9;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/AGO/AGO-map.svg"); }
     body[data-country='AGO'] .home-tile.map:hover {
       background-position: 50% 100%; }
-    body[data-country='AGO'] .home-tile.map .h4 {
+    body[data-country='AGO'] .home-tile.map h4 {
       background-color: #b4a0a9; }
   body[data-country='AGO'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -6503,12 +6505,14 @@ body[data-country='BEN'] {
     color: #b8d7da; }
   body[data-country='BEN'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='BEN'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='BEN'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/BEN/BEN-map.svg"); }
     body[data-country='BEN'] .home-tile.map:hover {
       background-position: 46% 76%; }
-    body[data-country='BEN'] .home-tile.map .h4 {
+    body[data-country='BEN'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='BEN'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -6653,12 +6657,14 @@ body[data-country='BFA'] {
     color: #b8d7da; }
   body[data-country='BFA'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='BFA'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='BFA'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/BFA/BFA-map.svg"); }
     body[data-country='BFA'] .home-tile.map:hover {
       background-position: 45% 76%; }
-    body[data-country='BFA'] .home-tile.map .h4 {
+    body[data-country='BFA'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='BFA'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -6803,12 +6809,14 @@ body[data-country='CIV'] {
     color: #b8d7da; }
   body[data-country='CIV'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='CIV'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='CIV'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/CIV/CIV-map.svg"); }
     body[data-country='CIV'] .home-tile.map:hover {
       background-position: 44% 84%; }
-    body[data-country='CIV'] .home-tile.map .h4 {
+    body[data-country='CIV'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='CIV'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #f07f52; }
@@ -6953,12 +6961,14 @@ body[data-country='CMR'] {
     color: #b8d7da; }
   body[data-country='CMR'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='CMR'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='CMR'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/CMR/CMR-map.svg"); }
     body[data-country='CMR'] .home-tile.map:hover {
       background-position: 50% 76%; }
-    body[data-country='CMR'] .home-tile.map .h4 {
+    body[data-country='CMR'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='CMR'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #f07f52; }
@@ -7103,12 +7113,14 @@ body[data-country='COG'] {
     color: #b8d7da; }
   body[data-country='COG'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='COG'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='COG'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/COG/COG-map.svg"); }
     body[data-country='COG'] .home-tile.map:hover {
       background-position: 50% 76%; }
-    body[data-country='COG'] .home-tile.map .h4 {
+    body[data-country='COG'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='COG'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -7253,12 +7265,14 @@ body[data-country='MDG'] {
     color: #b8d7da; }
   body[data-country='MDG'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='MDG'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='MDG'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/MDG/MDG-map.svg"); }
     body[data-country='MDG'] .home-tile.map:hover {
       background-position: 63% 94%; }
-    body[data-country='MDG'] .home-tile.map .h4 {
+    body[data-country='MDG'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='MDG'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -7403,12 +7417,14 @@ body[data-country='MLI'] {
     color: #b8d7da; }
   body[data-country='MLI'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='MLI'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='MLI'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/MLI/MLI-map.svg"); }
     body[data-country='MLI'] .home-tile.map:hover {
       background-position: 45% 76%; }
-    body[data-country='MLI'] .home-tile.map .h4 {
+    body[data-country='MLI'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='MLI'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -7553,12 +7569,14 @@ body[data-country='RWA'] {
     color: #b8d7da; }
   body[data-country='RWA'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='RWA'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='RWA'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/RWA/RWA-map.svg"); }
     body[data-country='RWA'] .home-tile.map:hover {
       background-position: 50% 76%; }
-    body[data-country='RWA'] .home-tile.map .h4 {
+    body[data-country='RWA'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='RWA'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #f07f52; }
@@ -7703,12 +7721,14 @@ body[data-country='SEN'] {
     color: #b8d7da; }
   body[data-country='SEN'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='SEN'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='SEN'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/SEN/SEN-map.svg"); }
     body[data-country='SEN'] .home-tile.map:hover {
       background-position: 50% 76%; }
-    body[data-country='SEN'] .home-tile.map .h4 {
+    body[data-country='SEN'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='SEN'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -7853,12 +7873,14 @@ body[data-country='GHA'] {
     color: #b8d7da; }
   body[data-country='GHA'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='GHA'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='GHA'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/GHA/GHA-map.svg"); }
     body[data-country='GHA'] .home-tile.map:hover {
       background-position: 46% 76%; }
-    body[data-country='GHA'] .home-tile.map .h4 {
+    body[data-country='GHA'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='GHA'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -8003,12 +8025,14 @@ body[data-country='ETH'] {
     color: #b8d7da; }
   body[data-country='ETH'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='ETH'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='ETH'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/ETH/ETH-map.svg"); }
     body[data-country='ETH'] .home-tile.map:hover {
       background-position: 59% 76%; }
-    body[data-country='ETH'] .home-tile.map .h4 {
+    body[data-country='ETH'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='ETH'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -8153,12 +8177,14 @@ body[data-country='UGA'] {
     color: #d2c2c0; }
   body[data-country='UGA'] .home-tile.gray {
     background-color: #978b90; }
+    body[data-country='UGA'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='UGA'] .home-tile.map {
     background-color: #b4a0a9;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/UGA/UGA-map.svg"); }
     body[data-country='UGA'] .home-tile.map:hover {
       background-position: 57% 100%; }
-    body[data-country='UGA'] .home-tile.map .h4 {
+    body[data-country='UGA'] .home-tile.map h4 {
       background-color: #b4a0a9; }
   body[data-country='UGA'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -8303,12 +8329,14 @@ body[data-country='MOZ'] {
     color: #b8d7da; }
   body[data-country='MOZ'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='MOZ'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='MOZ'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/MOZ/MOZ-map.svg"); }
     body[data-country='MOZ'] .home-tile.map:hover {
-      background-position: 50% 76%; }
-    body[data-country='MOZ'] .home-tile.map .h4 {
+      background-position: 57% 100%; }
+    body[data-country='MOZ'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='MOZ'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -8453,12 +8481,14 @@ body[data-country='NGA'] {
     color: #b8d7da; }
   body[data-country='NGA'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='NGA'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='NGA'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/NGA/NGA-map.svg"); }
     body[data-country='NGA'] .home-tile.map:hover {
       background-position: 48% 76%; }
-    body[data-country='NGA'] .home-tile.map .h4 {
+    body[data-country='NGA'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='NGA'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -8603,12 +8633,14 @@ body[data-country='MWI'] {
     color: #b8d7da; }
   body[data-country='MWI'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='MWI'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='MWI'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/MWI/MWI-map.svg"); }
     body[data-country='MWI'] .home-tile.map:hover {
       background-position: 57% 100%; }
-    body[data-country='MWI'] .home-tile.map .h4 {
+    body[data-country='MWI'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='MWI'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -8753,12 +8785,14 @@ body[data-country='KEN'] {
     color: #b8d7da; }
   body[data-country='KEN'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='KEN'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='KEN'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/KEN/KEN-map.svg"); }
     body[data-country='KEN'] .home-tile.map:hover {
       background-position: 59% 97%; }
-    body[data-country='KEN'] .home-tile.map .h4 {
+    body[data-country='KEN'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='KEN'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -8903,12 +8937,14 @@ body[data-country='TZA'] {
     color: #b8d7da; }
   body[data-country='TZA'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='TZA'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='TZA'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/TZA/TZA-map.svg"); }
     body[data-country='TZA'] .home-tile.map:hover {
       background-position: 58% 91%; }
-    body[data-country='TZA'] .home-tile.map .h4 {
+    body[data-country='TZA'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='TZA'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -9053,12 +9089,14 @@ body[data-country='ZMB'] {
     color: #b8d7da; }
   body[data-country='ZMB'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='ZMB'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='ZMB'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/ZMB/ZMB-map.svg"); }
     body[data-country='ZMB'] .home-tile.map:hover {
       background-position: 56% 90%; }
-    body[data-country='ZMB'] .home-tile.map .h4 {
+    body[data-country='ZMB'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='ZMB'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -9203,12 +9241,14 @@ body[data-country='AFG'] {
     color: #b8d7da; }
   body[data-country='AFG'] .home-tile.gray {
     background-color: #869c93; }
+    body[data-country='AFG'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='AFG'] .home-tile.map {
     background-color: #97bead;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/AFG/AFG-map.svg"); }
     body[data-country='AFG'] .home-tile.map:hover {
       background-position: 69% 57%; }
-    body[data-country='AFG'] .home-tile.map .h4 {
+    body[data-country='AFG'] .home-tile.map h4 {
       background-color: #97bead; }
   body[data-country='AFG'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #db514b; }
@@ -9353,12 +9393,14 @@ body[data-country='ZZZ'] {
     color: #c9ddef; }
   body[data-country='ZZZ'] .home-tile.gray {
     background-color: #93a0ab; }
+    body[data-country='ZZZ'] .home-tile.gray h2 {
+      font-weight: 100; }
   body[data-country='ZZZ'] .home-tile.map {
     background-color: #a5bcd0;
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/ZZZ/ZZZ-map.svg"); }
     body[data-country='ZZZ'] .home-tile.map:hover {
       background-position: 50% 50%; }
-    body[data-country='ZZZ'] .home-tile.map .h4 {
+    body[data-country='ZZZ'] .home-tile.map h4 {
       background-color: #a5bcd0; }
   body[data-country='ZZZ'] .language .tx-srlanguagemenu-pi1 > div.CUR a {
     color: #f07f52; }
