--- a/src/css/countrystat-ui.css
+++ b/src/css/countrystat-ui.css
@@ -6194,7 +6194,7 @@ div[data-plugin="filter"] .fx-catalog-modular-form-content {
     .language .tx-srlanguagemenu-pi1 > div.CUR a {
       color: #db514b; }
 
-.tx-dynalist-pi1-recordlist┬á {
+.tx-dynalist-pi1-recordlist  {
   padding-bottom: 0px; }
 
 .news-list .list-image {
@@ -9525,8 +9525,5 @@ body[data-country='ZZZ'] {
     box-shadow: 0 0 0 45px rgba(240, 127, 82, 0); } }
 body[data-country='ZZZ'] .country-details h1 {
   padding: 0; }
-
-#dLabel {
-  display: none !important; }
 
 /*# sourceMappingURL=countrystat-ui.css.map */
