--- a/src/css/themes/_typo3-styling.scss
+++ b/src/css/themes/_typo3-styling.scss
@@ -53,6 +53,16 @@
 
 //NEWS
 
+.article-image{
+
+  img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+
 .news-list{
 
 
@@ -72,18 +82,16 @@
     /* Default */
 
     @media (min-width: 768px) and (max-width: 991px) {
-      height: 130px;
+      height: 100px;
     }
 
     @media (min-width: 992px) and (max-width: 1199px) {
-      height: 180px;
+      height: 120px;
     }
 
     @media (min-width: 1200px) {
-      height: 230px;
+      height: 170px;
     }
-
-
 
     .img-responsive{
       width: 100%;
