--- a/src/css/themes/_typo3-styling.scss
+++ b/src/css/themes/_typo3-styling.scss
@@ -259,3 +259,8 @@ div.tx-dynalist-pi1-pagination{
 
 }
 
+// Added by David
+
+.dynafef_file_uploaded{
+  input[type='checkbox'] {display: inline !important;}
+}
