Edtis for Gabon

--- a/src/css/countrystat-ui.css
+++ b/src/css/countrystat-ui.css
@@ -7871,7 +7871,7 @@ body[data-country='GAB'] {
   /* Radio Buttons */
   /* Checkbox Buttons */ }
   body[data-country='GAB'] .country-welcome {
-    background-color: #f09752; }
+    background-color: #f0e352; }
   body[data-country='GAB'] .country-details {
     background-image: url("http://fenixrepo.fao.org/countrystat/assets/GAB/GAB-home.jpg"); }
   body[data-country='GAB'] .home-content {
