--- a/src/css/themes/_unified-style.scss
+++ b/src/css/themes/_unified-style.scss
@@ -26,7 +26,7 @@ $countries: (
                 (MLI, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,45% 76%, #29403e, #305a52, #3a7f70),
                 (RWA, #f07f52, #f09752, #2f5674, #f8cba9, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #2d3e46, #345962, #3f7d8b),
                 (SEN, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
-                (GAB, #f07f52, #f0e352, #2f5674, #f8cba9, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #2d3e46, #345962, #3f7d8b),
+                (GAB, #f07f52, #f0e352, #2f5674, #f8f1a9, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #2d3e46, #345962, #3f7d8b),
                 (COG, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #29403e, #305a52, #3a7f70),
                 (GHA, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,46% 76%, #29403e, #305a52, #3a7f70),
                 (ETH, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,59% 76%, #29403e, #305a52, #3a7f70),
