--- a/src/html/analysis/template.hbs
+++ b/src/html/analysis/template.hbs
@@ -1,3 +1,5 @@
 <div class="pull-right empty-cell-note" data-missing>
-   {{missingValues}}
+    {{missingValues}} <br>
+    {{estimatedValues}} <br>
+    {{calculatedValues}}
 </div>
