--- a/src/css/themes/_unified-style.scss
+++ b/src/css/themes/_unified-style.scss
@@ -28,6 +28,7 @@ $countries: (
                 (GAB, #f07f52, #f0e352, #2f5674, #f8f1a9, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,50% 76%, #2d3e46, #345962, #3f7d8b),
                 (GHA, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,46% 76%, #29403e, #305a52, #3a7f70),
                 (HTI, #db514b, #92a1ca, #2D3246, #c9d1e7, #ede4e6, #a68f8f, #d2c2c0, #978b90, #b4a0a9,19% 75%, #3a2e2f, #503a3e, #6e4a52),
+                (LBR, #db514b, #92a1ca, #2D3246, #c9d1e7, #ede4e6, #a68f8f, #d2c2c0, #978b90, #b4a0a9,19% 75%, #3a2e2f, #503a3e, #6e4a52),
                 (KEN, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,59% 97%, #29403e, #305a52, #3a7f70),
                 (MDG, #db514b, #df6660, #2b686a, #eca3a0, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,63% 94%, #29403e, #305a52, #3a7f70),
                 (MLI, #db514b, #e4c779, #2b686a, #f5e5bb, #e0f1ee, #abb9c4, #b8d7da, #869c93, #97bead,45% 76%, #29403e, #305a52, #3a7f70),
