--- a/src/html/analysis/template.hbs
+++ b/src/html/analysis/template.hbs
@@ -1,5 +1,6 @@
 <div class="pull-right empty-cell-note" data-missing>
     {{missingValues}} <br>
     {{estimatedValues}} <br>
-    {{calculatedValues}}
+    {{calculatedValues}} <br>
+    {{noValues}}
 </div>
